2009-11-02

	* libsylph/imap.[ch]
	  src/summaryview.c: don't allow parallel multiple command on IMAP.

2009-10-29

	* src/update_check.c: fixed freeze bug on showing dialog.

2009-10-29

	* version 3.0.0beta1

2009-10-29

	* libsylph/libsylph-0.def
	  src/libsylpheed-plugin-0.def: updated.

2009-10-29

	* src/addressbook.c: modified the design.

2009-10-29

	* src/addressbook.c: addressbook_list_button_pressed(): change
	  selection if a non-selected row is right-clicked.

2009-10-28

	* libsylph/socket.c: sock_connect_async_thread(): fixed a crash
	  when connection failed.

2009-10-28

	* src/addressbook.c: removed debug print.

2009-10-28

	* src/update_check.c: made release version have priority over
	  development version.

2009-10-28

	* src/addressbook.c: expand tree row when double-clicked.
	  Removed commented out code.

2009-10-28

	* src/addressbook.c: automatically sort the tree and list.

2009-10-28

	* src/addressbook.c: don't change selection when the list is right-
	  clicked.

2009-10-27

	* src/addressbook.c: reimplemented addressbook_move_nodes_up().

2009-10-27

	* src/addressbook.c
	  src/addressitem.h: reimplemented the list view of address book UI
	  with GtkTreeView.

2009-10-26

	* src/addressbook.c
	  src/addressitem.h: reimplemented the folder tree of address book
	  UI with GtkTreeView.

2009-10-23

	* configure.in: made threads enabled by default.

2009-10-20

	* libsylph/imap.c:
	  imap_fetch_msg()
	  imap_cmd_fetch(): fixed a bug that could not fetch UID more than
	  INT_MAX.

2009-10-20

	* faq/en/sylpheed-faq*: updated Sylpheed FAQ (English)
	  (thanks to Petr Kovar).
	* README
	  README.ja: updated.

2009-10-16

	* libsylph/utils.[ch]: added tzoffset_buf().
	  Made get_rfc822_date(), get_outgoing_rfc2822_str() and
	  generate_mime_boundary() thread-safe.

2009-10-16

	* libsylph/mh.c
	  libsylph/procmsg.c
	  libsylph/news.c
	  libsylph/filter.c
	  libsylph/imap.c: use itos_buf() because itos() is not thread-safe.

2009-10-16
