@@ -1,5 +1,12 @@
 2009-11-02
 
+	* libsylph/utils.[ch]
+	  libsylph/mh.c
+	  libsylph/procmsg.c
+	  libsylph/news.c: more fix for UID more than INT_MAX.
+
+2009-11-02
+
 	* libsylph/imap.[ch]
 	  src/summaryview.c: don't allow parallel multiple command on IMAP.
 
